# Voltura

./: .gitignore  CMakeLists.txt  README.md
include/voltura/: core.hpp
src/: CMakeLists.txt  core.cpp  main.cpp
tests/: CMakeLists.txt
